adding logo image filter, reveal loading animations

--- a/resources/package.json
+++ b/resources/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/dev7ch/luya-africa-kickstarter#readme",
   "dependencies": {
     "gulp": "^3.9.1",
+    "scrollreveal": "^3.3.6",
     "zephir-gulp-workflow": "^2.0.1"
   }
 }
