--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "luyadev/luya-core" : "~1.0.0",
         "luyadev/luya-module-admin" : "~1.0.0",
         "luyadev/luya-module-cms" : "~1.0.0",
+        "luyadev/luya-bootstrap4" : "~1.0@dev",
         "luyadev/luya-generic" : "~1.0.0",
         "twbs/bootstrap": "4.0.0",
         "luyadev/luya-module-contactform": "~1.0.0"
